# edgee

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README-proxy.md  README.md  SECURITY.md  edgee.sample.toml  edgee.toml  flake.nix  install.sh  package-lock.json  release.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: build-aarch64-darwin.yml  build-aarch64-linux.yml  build-x86_64-darwin.yml  build-x86_64-linux.yml  check.yml  ci.yml  flakehub-publish-tagged.yml  publish.yml  release.yml  rust-ci.yml
crates/api-client/: Cargo.toml  dc-openapi.json  openapi.json
crates/api-client/src/: auth.rs  data_collection.rs  lib.rs  upload.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logger.rs  main.rs  telemetry.rs
crates/cli/src/commands/: completion.rs  macros.rs  mod.rs  proxy.rs  serve.rs  update.rs
crates/cli/src/commands/auth/: login.rs  mod.rs  whoami.rs
crates/cli/src/commands/components/: build.rs  check.rs  fetch_wit.rs  init.rs  list.rs  mod.rs  new.rs  pull.rs  push.rs  serialize.rs  test.rs  wit.rs
crates/cli/src/commands/components/test/: mod.rs  test_data_collection_v1_0_0.rs  test_data_collection_v1_0_1.rs  test_edge_function_v1_0_0.rs
crates/cli/src/components/: boilerplate.rs  boilerplates.rs  manifest.rs  mod.rs  wit.rs
crates/cli/src/components/wit-world/: data-collection.wit
crates/components/: Cargo.toml
crates/components-runtime/: Cargo.toml
crates/components-runtime/src/: config.rs  context.rs  helpers.rs  lib.rs  payload.rs
crates/components-runtime/src/components/: config.rs
crates/components-runtime/src/consent_management/versions/: mod.rs
crates/components-runtime/src/consent_management/versions/v1_0_0/: mod.rs
crates/components-runtime/src/consent_management/wit/: deps.toml  world.wit
crates/components-runtime/src/consent_mapping/: mod.rs
crates/components-runtime/src/consent_mapping/versions/v1_0_0/: mod.rs
crates/components-runtime/src/consent_mapping/wit/: deps.toml  world.wit
crates/components-runtime/src/data_collection/: auth.rs  context.rs  convert.rs  debug.rs  logger.rs  mod.rs  payload.rs  version.rs
crates/components-runtime/src/data_collection/v0_5_0/: convert.rs  mod.rs
crates/components-runtime/src/data_collection/v1_0_0/: convert.rs  execute.rs  mod.rs
crates/components-runtime/src/data_collection/version/: convert_0_5_0.rs  convert_1_0_0.rs  mod.rs
crates/components-runtime/src/data_collection/versions/: mod.rs
crates/components-runtime/src/data_collection/versions/v1_0_0/: convert.rs  execute.rs  mod.rs
crates/components-runtime/src/data_collection/versions/v1_0_1/: convert.rs  execute.rs  mod.rs
crates/components-runtime/src/data_collection/versions/v1_1_0/: convert.rs  execute.rs  mod.rs
crates/components-runtime/src/data_collection/wit/: deps.toml  world.wit
crates/components-runtime/src/edge_function/: mod.rs
crates/components-runtime/src/edge_function/versions/: mod.rs
crates/components-runtime/src/edge_function/versions/v1_0_0/: mod.rs
crates/components-runtime/src/edge_function/wit/: deps.toml  world.wit
crates/components-runtime/tests/: ga.wasm
crates/components-runtime/wit/: deps.toml  world.wit
crates/components/src/: lib.rs
crates/components/src/auth/: mod.rs  models.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: config.rs
crates/proxy/src/proxy/: controller.rs  mod.rs
crates/proxy/src/proxy/compute/: mod.rs
crates/proxy/src/proxy/compute/data_collection/: mod.rs
crates/proxy/src/proxy/context/: mod.rs
crates/proxy/src/tools/: crypto.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  monitor.rs
crates/server/src/proxy/: controller.rs  mod.rs
crates/server/src/proxy/compute/: html.rs  mod.rs
crates/server/src/proxy/compute/data_collection/: mod.rs  payload.rs
crates/server/src/proxy/compute/data_collection/components/: context.rs  convert.rs  mod.rs
crates/server/src/proxy/context/: body.rs  incoming.rs  proxy.rs  redirection.rs  routing.rs
crates/server/src/tools/: cacheable.rs  crypto.rs  edgee_cookie.rs  real_ip.rs
crates/server/wit/: protocols.wit
crates/wasmtime/: Cargo.toml
crates/wasmtime-runtime/: Cargo.toml
crates/wasmtime-runtime/src/: lib.rs  payload.rs
crates/wasmtime-runtime/src/components/: context.rs  convert.rs  mod.rs
crates/wasmtime/src/: lib.rs  payload.rs
crates/wasmtime/src/components/: config.rs  config_file.rs  context.rs  convert.rs  mod.rs
crates/wasmtime/wit/: deps.toml  world.wit
examples/: compression.rs  simple.rs  stream_tools.rs  streaming.rs  tools.rs  tools_auto.rs
public/: edgee.v1.0.0.js  edgee.v1.0.1.js  edgee.v1.0.2.js  edgee.v1.1.0.js  edgee.v1.2.0.js  sdk.js
src/: analytics.rs  cli.rs  client.rs  config.rs  cookie.rs  crypto.rs  data_collection.rs  destinations.rs  domains.rs  edge.rs  entrypoint.rs  entrypoints.rs  error.rs  html.rs  lib.rs  logger.rs  main.rs  models.rs  monitor.rs  path.rs  providers.rs  proxy.rs  real_ip.rs  server.rs
src/config/: config.rs
src/entrypoint/: incoming_context.rs  proxy_context.rs  routing_context.rs  web.rs  websecure.rs
src/logger/: logger.rs
src/proxy/: cleartext.rs  controller.rs  mod.rs  proxy.rs  request_ext.rs  secure.rs
src/proxy/compute/: compute.rs  html.rs  mod.rs
src/proxy/compute/data_collection/: components.rs  data_collection.rs  mod.rs  payload.rs
src/proxy/compute/data_collection/components/: context.rs  convert.rs  mod.rs
src/proxy/context/: incoming.rs  mod.rs  proxy.rs  routing.rs
src/proxy/controller/: controller.rs
src/public/: 502.html
src/tools/: cacheable.rs  crypto.rs  edgee_cookie.rs  mod.rs  path.rs  real_ip.rs
wit/: protocols.wit
