[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.2.10"
authors = ["Edgee <opensource@edgee.cloud>"]
license = "Apache-2.0"
keywords = ["edgee"]
repository = "https://github.com/edgee-cloud/edgee"
homepage = "https://www.edgee.cloud"
readme = true
edition = "2021"

[workspace.dependencies]
addr = "0.15.6"
aes = "0.8.4"
anyhow = "1.0.83"
base64 = "0.22.1"
bon = "3.3.2"
brotli = "8.0.1"
bytes = "1.8.0"
cbc = "0.1.2"
chrono = "0.4.38"
clap = "4.5.21"
clap_complete = "4.5.45"
colored = "3.0.0"
colored_json = "5.0.0"
cookie = "0.18.1"
dirs = "6.0.0"
easy-ext = "1.0.2"
futures = "0.3.31"
hex = "0.4.3"
html-escape = "0.2.13"
http = "1.1.0"
http-body-util = "0.1"
hyper = "1.5.1"
hyper-rustls = "0.27.2"
hyper-util = "0.1.5"
indexmap = "2.8.0"
inquire = "0.7.5"
ipnetwork = "0.21.0"
json_comments = "0.2.2"
json_pretty = "0.1.2"
lazy_static = "1.5.0"
libflate = "2.1.0"
log = "0.4.22"
lol_html = "2.2.0"
miette = "7.4.0"
open = "5.3.2"
openssl = "0.10.72"
os_info = "3.10.0"
pin-project = "1.1.7"
progenitor = "0.10.0"
progenitor-client = "0.10.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.9"
rustls = "0.23.19"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.0"
schemars = "0.8.21"
self_update = "0.42.0"
sentry = "0.38.1"
sentry-anyhow = "0.38.1"
serde = "1.0.215"
serde_json = "1.0.133"
serde_with = "3.11.0"
serde_yml = "0.0.12"
serial_test = "3.2.0"
sha2 = "0.10.8"
slug = "0.1.6"
tempfile = "3.19.0"
tokio = "1.44.2"
tokio-rustls = "0.26.0"
toml = "0.8.12"
tower = "0.5.1"
tower-http = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unicase = "2.8.1"
url = "2.5.2"
uuid = "1.11.0"
wasmtime = "32.0.0"
wasmtime-wasi = "32.0.0"
wit-deps = "0.5.0"
zip = "3.0.0"

cargo-llvm-cov = "0.6.15"
pretty_assertions = "1.4.1"

edgee-sdk = "1.7.3"
edgee-api-client = { version = "1.2.10", path = "crates/api-client" }
edgee-server = { version = "1.2.10", path = "crates/server" }
edgee-components-runtime = { version = "1.2.10", path = "crates/components-runtime" }
