[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.2.18"
authors = ["Edgee <opensource@edgee.cloud>"]
license = "Apache-2.0"
keywords = ["edgee"]
repository = "https://github.com/edgee-cloud/edgee"
homepage = "https://www.edgee.cloud"
readme = true
edition = "2021"

[workspace.dependencies]
addr = "0.15.6"
aes = "0.8.4"
anyhow = "1.0.98"
base64 = "0.22.1"
bon = "3.6.4"
brotli = "8.0.1"
bytes = "1.10.1"
cbc = "0.1.2"
chrono = "0.4.41"
clap = "4.5.41"
clap_complete = "4.5.55"
colored = "3.0.0"
colored_json = "5.0.0"
cookie = "0.18.1"
dirs = "6.0.0"
easy-ext = "1.0.2"
futures = "0.3.31"
hex = "0.4.3"
html-escape = "0.2.13"
http = "1.3.1"
http-body-util = "0.1"
hyper = "1.6.0"
hyper-rustls = "0.27.7"
hyper-util = "0.1.15"
indexmap = "2.10.0"
inquire = "0.7.5"
ipnetwork = "0.21.1"
json_comments = "0.2.2"
json_pretty = "0.1.2"
lazy_static = "1.5.0"
libflate = "2.1.0"
log = "0.4.27"
lol_html = "2.5.0"
miette = "7.6.0"
notify = "8.1.0"
open = "5.3.2"
openssl = "0.10.73"
os_info = "3.12.0"
pin-project = "1.1.10"
progenitor = "0.11.0"
progenitor-client = "0.11.0"
rand = "0.9.1"
regex = "1.11.1"
regress = "0.4.1"
reqwest = "0.12.22"
rustls = "0.23.29"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
schemars = "1.0.4"
self_update = "0.42.0"
sentry = "0.41.0"
sentry-anyhow = "0.41.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.14.0"
serde_yml = "0.0.12"
serial_test = "3.2.0"
sha2 = "0.10.9"
slug = "0.1.6"
tempfile = "3.20.0"
tokio = "1.46.1"
tokio-rustls = "0.26.2"
toml = "0.9.2"
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unicase = "2.8.1"
url = "2.5.4"
uuid = "1.17.0"
wasmtime = "34.0.1"
wasmtime-wasi = "34.0.1"
wasmtime-wasi-http = "34.0.1"
wit-deps = "0.5.0"
zip = "4.3.0"

cargo-llvm-cov = "0.6.17"
pretty_assertions = "1.4.1"

edgee-sdk = "1.7.3"
edgee-api-client = { version = "1.2.18", path = "crates/api-client" }
edgee-server = { version = "1.2.18", path = "crates/server" }
edgee-components-runtime = { version = "1.2.18", path = "crates/components-runtime" }
