[package]
name = "edgee"
version = "2.0.1"
edition = "2021"
authors = ["Edgee <opensource@edgee.cloud>"]
license = "Apache-2.0"
description = "Rust SDK for the Edgee AI Gateway"
homepage = "https://www.edgee.cloud"
repository = "https://github.com/edgee-cloud/rust-sdk"
keywords = ["ai", "llm", "gateway", "openai", "anthropic"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# SSE parsing for streaming
futures = "0.3"
bytes = "1.7"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "tools"
path = "examples/tools.rs"

[[example]]
name = "tools_auto"
path = "examples/tools_auto.rs"

[[example]]
name = "stream_tools"
path = "examples/stream_tools.rs"
