[package]
name = "edgee-api-client"
description = "Edgee API client"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
progenitor.workspace = true
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true, features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
