[package]
name = "edgee-api-client"
description = "Edgee API client"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
chrono = { workspace = true, features = ["serde"] }
cookie = { workspace = true, features = ["percent-encode"] }
dirs.workspace = true
easy-ext.workspace = true
progenitor.workspace = true
progenitor-client.workspace = true
regress.workspace = true
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true, features = ["chrono04", "uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
