[package]
name = "edgee"
description = "The full-stack edge platform for your edge oriented applications"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
colored.workspace = true
colored_json.workspace = true
http.workspace = true
inquire = { workspace = true, features = ["editor"] }
miette = { workspace = true, features = ["fancy"] }
openssl.workspace = true
self_update.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yml.workspace = true
serde_json.workspace = true
slug.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["blocking"] }
zip.workspace = true

edgee-api-client.workspace = true
edgee-server.workspace = true
edgee-components-runtime.workspace = true

[features]
bundled = ["openssl/vendored"]
