[package]
name = "edgee"
description = "The full-stack edge platform for your edge oriented applications"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
colored.workspace = true
colored_json.workspace = true
http.workspace = true
indexmap.workspace = true
inquire = { workspace = true, features = ["editor"] }
miette = { workspace = true, features = ["fancy"] }
open.workspace = true
openssl.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
self_update.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yml.workspace = true
serde_json.workspace = true
sha2.workspace = true
slug.workspace = true
tempfile.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true, features = ["preserve_order"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
unicase.workspace = true
url = { workspace = true, features = ["serde"] }
wit-deps.workspace = true
zip.workspace = true

edgee-api-client.workspace = true
edgee-server.workspace = true
edgee-components-runtime.workspace = true

[features]
bundled = ["openssl/vendored"]
no-self-update = []

[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }.{ target }{ archive-suffix }"
