[package]
name = "edgee-components-runtime"
description = "Edgee components runtime (using wasmtime)"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
http.workspace = true
json_pretty.workspace = true
regex.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
cargo-llvm-cov.workspace = true
pretty_assertions.workspace = true
