[package]
name = "edgee-components"
description = "Edgee crate for authoring, building and publishing components"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
