[package]
name = "edgee-proxy"
description = "Edgee proxy"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
addr.workspace = true
aes.workspace = true
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
cbc = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["serde"] }
cookie.workspace = true
futures.workspace = true
hex.workspace = true
html-escape.workspace = true
http-body-util.workspace = true
http.workspace = true
hyper = { workspace = true, features = ["server"] }
hyper-rustls = { workspace = true, features = ["ring", "http2"] }
hyper-util = { workspace = true, features = ["server", "service", "tokio", "http1", "http2"] }
ipnetwork.workspace = true
json_comments.workspace = true
lazy_static.workspace = true
lol_html.workspace = true
pin-project.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls = { workspace = true, features = ["ring"] }
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
tokio = { workspace = true, features = ["rt", "net"] }
tokio-rustls.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["compression-full", "decompression-full"] }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

edgee-dc-sdk.workspace = true
edgee-components-runtime.workspace = true

[dev-dependencies]
cargo-llvm-cov.workspace = true
pretty_assertions.workspace = true
